--- a/css/index.css
+++ b/css/index.css
@@ -17,13 +17,15 @@ p {
 .topnav {
   background-color: black;
   overflow: hidden;
+  border-radius: 25px;
+
 }
 
 .topnav a {
   float: left;
   color: white;
   text-align: center;
-  padding: 14px 16px;
+  padding: 14px 20px;
   text-decoration: none;
   font-size: 17px;
 }
