--- a/css/projects.css
+++ b/css/projects.css
@@ -1,3 +1,11 @@
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 20%;
+  height: 20%;
+}
+
 p {
   font-family: verdana;
   font-size: 20px;
