--- a/css/projects.css
+++ b/css/projects.css
@@ -1,14 +1,20 @@
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 20%;
-  height: 20%;
+.wwwglobe {
+  float: left;
+  position: absolute;
+  left: 200px;
+  height: 200px;
+  width: 200px;
 }
 
-p {
-  font-family: verdana;
-  font-size: 20px;
-  color: red;
+h2 {
+  color: white;
   text-align: center;
+  padding-top: 20px;
+}
+
+.project1 p {
+  color: white;
+  text-align: center;
+  font-size: 20px;
+  font-family: verdana;
 }
