--- a/css/helpers.css
+++ b/css/helpers.css
@@ -78,3 +78,15 @@ h2 {
   padding-left: 20px;
   padding-top: 20px;
 }
+
+@media only screen and (max-width: 768px) {
+  p {
+    font-size: 16px;
+  }
+  .helper1, .helper2, .helper3{
+    height: 200px;
+    width: 335px;
+    float: left;
+    margin-top: 10px;
+  }
+}
