--- a/css/index.css
+++ b/css/index.css
@@ -14,10 +14,40 @@ p {
 }
 
 .kotori {
-  width: 15%;
-  height: 55%;
-  float: left;
-  position: absolute;
-  top: 440px;
-  max-width: 100%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  height: auto;
+  width: auto;
+  max-width: 15%;
+}
+
+.tweet {
+  width: 35%;
+  height: 30%;
+  padding-top: 60px;
+  max-width: 35%;
+}
+
+.pfp {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 20%;
+  height: 20%;
+}
+
+@media only screen and (max-width: 768px) {
+  .kotori {
+    display: none;
+  }
+  .tweet {
+    width: 80%;
+    max-width: 80%;
+    padding-top: 30px;
+  }
+  .pfp {
+    width: 50%;
+    max-width: 50%;
+  }
 }
