--- a/css/index.css
+++ b/css/index.css
@@ -1,29 +1,7 @@
 body {
-  background-image: linear-gradient(to bottom right, rgb(24, 236, 148), rgb(111, 98, 223));
-}
-
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 20%;
-  height: 20%;
-}
-
-p {
-  font-family: verdana;
-  font-size: 20px;
-  color: white;
-  text-align: center;
-}
-
-.kotori {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  height: auto;
-  width: auto;
-  max-width: 15%;
+  background-image: linear-gradient(to bottom right, rgb(24, 236, 148), rgb(111, 98, 223), white);
+  background-position: center;
+  background-size: cover;
 }
 
 .tweet {
@@ -42,9 +20,6 @@ p {
 }
 
 @media only screen and (max-width: 768px) {
-  .kotori {
-    display: none;
-  }
   .tweet {
     width: 80%;
     max-width: 80%;
