--- a/css/global.css
+++ b/css/global.css
@@ -1,3 +1,4 @@
+@font-face { font-family: Comfortaa; src: url('../Comfortaa-Regular.ttf'); }
 nav {
   background-color: white;
   opacity: 25%;
@@ -5,7 +6,7 @@ nav {
 nav.a {
   text-decoration: none;
   color: white;
-  font-family: comfortaa;
+  font-family: Comfortaa;
 }
 .main{
   font-weight: bold;
