--- a/css/global.css
+++ b/css/global.css
@@ -1,19 +1,18 @@
-
+nav a {
+  text-decoration: none;
+  color: black;
+  opacity: 100;
+  float: left;
+}
 nav {
   background-color: white;
   opacity: 25%;
 }
-nav a {
-  text-decoration: none;
-  color: black;
-  z-index: 3;
-  opacity: 100;
-  float: left;
-}
 .main{
   font-weight: bold;
   font-size: large;
-  margin-right: 5rem;
+  margin-right: 20px;
+  margin-left: 20px;
 }
 
 @media only screen and (max-width: 768px) {
