--- a/css/global.css
+++ b/css/global.css
@@ -5,6 +5,7 @@ nav a {
   float: left;
   padding: 10px;
   font-weight: bold;
+  margin-top: 20px;
 }
 nav {
   background-color: white;
@@ -13,8 +14,8 @@ nav {
 .main{
   font-weight: bold;
   font-size: x-large;
-  margin-right: 20px;
-  margin-left: 20px;
+  margin-right: 30px;
+  margin-left: 30px;
 }
 
 @media only screen and (max-width: 768px) {
