--- a/css/global.css
+++ b/css/global.css
@@ -13,7 +13,7 @@ nav {
 .main{
   font-weight: bold;
   font-size: x-large;
-  padding-top: -10;
+  padding-top: -10px;
 }
 
 @media only screen and (max-width: 768px) {
