--- a/css/global.css
+++ b/css/global.css
@@ -9,9 +9,9 @@ nav {
   background-color: white;
   opacity: 25%;
 }
-.Main{
+.Main {
   font-weight: bold;
-  font-size: x-large;
+  font-size: large;
   padding-top: 10px;
 }
 .Sub {
