--- a/css/global.css
+++ b/css/global.css
@@ -1,13 +1,11 @@
 nav a {
   text-decoration: none;
   color: black;
-  opacity: 100%;
   float: left;
   font-size: medium;
 }
 nav {
-  background-color: white;
-  opacity: 25%;
+  background-color: rgba(255, 255, 255, 0.2)
 }
 .Main {
   font-weight: bold;
