--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 body {
   background-image: linear-gradient(135deg, rgb(24, 236, 148), rgb(111, 98, 223), white);
-  background-size:cover
+  background-size: cover;
 }
 
 .tweet {
