--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,8 @@
 body {
-  background-image: linear-gradient(135deg, rgb(24, 236, 148), rgb(111, 98, 223), white);
-  background-size: cover;
+  background: white;
+  background-image: radial-gradient(black 1px, transparent 0);
+  background-size: 40px 40px;
+  background-position: -19px -19px;
 }
 
 .tweet {
