--- a/css/global.css
+++ b/css/global.css
@@ -3,6 +3,7 @@ nav a {
   color: black;
   font-size: medium;
   padding: 10px;
+  margin-top: 10px;
 }
 nav {
   background-color: rgba(255, 255, 255, 0)
@@ -13,6 +14,7 @@ nav {
   float: left;
   font-weight: bold;
   font-size: large;
+  padding-left: 5px;
 }
 
 @media only screen and (max-width: 768px) {
