--- a/css/global.css
+++ b/css/global.css
@@ -3,7 +3,7 @@ nav a {
   color: black;
   font-size: medium;
   padding: 10px;
-  margin-top: 10px;
+  margin-top: 2%;
 }
 nav {
   background-color: rgba(255, 255, 255, 0)
