--- a/css/global.css
+++ b/css/global.css
@@ -2,8 +2,6 @@ nav a {
   text-decoration: none;
   color: black;
   font-size: medium;
-  padding: 10px;
-  margin-top: 1%;
 }
 .Main {
   text-decoration: none;
@@ -11,7 +9,9 @@ nav a {
   float: left;
   font-weight: bold;
   font-size: large;
-  padding-left: 5px;
+}
+.navholder {
+  padding: 10px;
 }
 
 @media only screen and (max-width: 768px) {
