--- a/css/global.css
+++ b/css/global.css
@@ -1,10 +1,15 @@
 nav a {
   text-decoration: none;
   color: black;
+  display: block;
 }
 .Main {
   text-decoration: none;
   color: black;
+  display: block;
+  position: relative;
+  top: 2%;
+  left: 2%;
 }
 
 @media only screen and (max-width: 768px) {
