--- a/css/global.css
+++ b/css/global.css
@@ -2,6 +2,9 @@ nav a {
   text-decoration: none;
   color: black;
   display: block;
+  position: relative;
+  top: 2%;
+  left: 2.5;
 }
 .Main {
   text-decoration: none;
@@ -9,7 +12,7 @@ nav a {
   display: block;
   position: relative;
   top: 2%;
-  left: 2%;
+  left: 1.5%;
 }
 
 @media only screen and (max-width: 768px) {
