--- a/css/global.css
+++ b/css/global.css
@@ -5,6 +5,8 @@ nav a {
   position: relative;
   top: 2%;
   left: 2.5;
+  float: right;
+  padding: 10px;
 }
 .Main {
   text-decoration: none;
@@ -13,6 +15,7 @@ nav a {
   position: relative;
   top: 2%;
   left: 1.5%;
+  float: left;
 }
 
 @media only screen and (max-width: 768px) {
