--- a/css/global.css
+++ b/css/global.css
@@ -2,7 +2,7 @@ nav a {
   text-decoration: none;
   color: black;
   display: block;
-  position: relative;
+  position: absolute;
   left: 2%;
   padding: 10px;
   float: left;
@@ -11,7 +11,7 @@ nav a {
   text-decoration: none;
   color: black;
   display: block;
-  position: relative;
+  position: absolute;
   top: 2%;
   left: 2%;
   float: left;
