--- a/css/global.css
+++ b/css/global.css
@@ -1,6 +1,6 @@
 nav a {
   text-decoration: none;
-  color: black;
+  color: white;
   display: block;
   left: 2%;
   padding: 10px;
@@ -8,7 +8,7 @@ nav a {
 }
 .Main {
   text-decoration: none;
-  color: black;
+  color: white;
   display: block;
   position: absolute;
   top: 2%;
