--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 body {
-  background: white;
-  background-image: radial-gradient(black 1px, transparent 0);
+  background: black;
+  background-image: radial-gradient(white 1px, transparent 0);
   background-size: 40px 40px;
   background-position: -20px -20px;
 }
