--- a/css/global.css
+++ b/css/global.css
@@ -1,10 +1,12 @@
 nav a {
   text-decoration: none;
   color: white;
+  padding: 10px;
+}
+nav {
+  float: left;
   display: block;
   left: 2%;
-  padding: 10px;
-  float: left;
 }
 .Main {
   text-decoration: none;
