--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,10 @@ body {
 .content p {
   color: black;
 }
+.text1 {
+  background-color: linear-gradient(rgb(96,240,180), rgb(136, 231, 12));
+  border-color: black;
+}
 
 .pfp {
   display: block;
