--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@ body {
   color: black;
 }
 .text1 {
-  background-image: linear-gradient(rgb(224, 28, 87), rgb(230, 149, 27));
+  background-image: linear-gradient(-45deg, rgb(224, 28, 87), rgb(230, 149, 27));
   border-color: black;
   border-style: solid;
   border-radius: 25px;
