--- a/css/index.css
+++ b/css/index.css
@@ -21,8 +21,8 @@ body {
   display: block;
   position: relative;
   left: 50%;
-  top: 25%;
-  transform: translate(-50%, -50%);
+  top: 40%;
+  transform: translate(-50%);
 }
 
 .pfp {
