--- a/css/index.css
+++ b/css/index.css
@@ -24,13 +24,13 @@ body {
   top: 40%;
   transform: translate(-50%);
 }
-
 .pfp {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 20%;
   height: 20%;
+  transform: translate(-50%);
 }
 
 @media only screen and (max-width: 768px) {
