--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,6 @@ body {
 }
 .content p {
   color: black;
-  text-align: center;
 }
 .text1 {
   background-image: linear-gradient(to bottom right, rgb(224, 28, 87), rgb(230, 149, 27));
@@ -26,10 +25,10 @@ body {
 }
 .pfp {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 20%;
-  height: 20%;
+  position: relative;
+  left: 50%;
+  width: 15%;
+  height: 15%;
   transform: translate(-50%);
 }
 
