--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,7 @@ body {
 }
 .content p {
   color: black;
+  text-align: center;
 }
 .text1 {
   background-image: linear-gradient(to bottom right, rgb(224, 28, 87), rgb(230, 149, 27));
