--- a/css/index.css
+++ b/css/index.css
@@ -20,14 +20,15 @@ body {
   width: 20%;
   display: block;
   position: relative;
-  left: 30%;
-  top: 40%;
+  left: 40%;
+  margin-top: 20px;
   text-align: center;
 }
 .pfp {
   display: block;
   position: relative;
-  left: 30%;
+  left: 40%;
+  top: 10%;
   width: 15%;
   height: 15%;
 }
