--- a/css/global.css
+++ b/css/global.css
@@ -1,3 +1,9 @@
+body {
+  background: white;
+  background-image: radial-gradient(black 2px, transparent 0);
+  background-size: 40px 40px;
+  background-position: -20px -20px;
+}
 nav a {
   text-decoration: none;
   color: black;
