--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,26 @@
+body {
+  background: white;
+  background-image: radial-gradient(black 2px, transparent 0);
+  background-size: 40px 40px;
+  background-position: -20px -20px;
+}
+nav a {
+  text-decoration: none;
+  color: black;
+  padding: 10px;
+  font-size: medium;
+  margin-left: 0;
+  transition: margin-left 2s;
+}
+nav a:hover {
+  margin-left: 10px;
+}
+nav {
+  float: left;
+  display: block;
+  left: 2%;
+  z-index: 1;
+}
 .content {
   left: 50%;
   z-index: 2;
