--- a/css/global.css
+++ b/css/global.css
@@ -24,6 +24,12 @@ nav {
   left: 2%;
   z-index: 1;
 }
+h2 {
+  position: absolute;
+  z-index: 3;
+  top: 0%;
+  right: 0%;
+}
 
 @media only screen and (max-width: 768px) {
 }
