--- a/css/projects.css
+++ b/css/projects.css
@@ -1,99 +1,15 @@
-.wwwglobe {
-  float: left;
-  position: absolute;
-  left: 200px;
-  height: 200px;
-  width: 200px;
-}
-.project1 p {
-  color: white;
-  text-align: center;
-  font-size: 20px;
-  font-family: verdana;
-}
-
-.SScardimage {
-  float: right;
-  position: absolute;
-  right: 200px;
-  height: 200px;
-  width: 200px;
-}
-.project2 p {
-  color: white;
-  text-align: center;
-  font-size: 20px;
-  font-family: verdana;
-}
-.project2 a {
-  color: white;
-  background-color: black;
-  text-align: center;
-  padding: 14px 20px;
-  text-decoration: none;
-  font-size: 17px;
+.project1 {
   border-radius: 25px;
-  position: absolute;
-  left: 48%;
+  border-style: solid;
+  border-color: black;
 }
-.project2 a:hover {
-  background-color: white;
-  color: black;
-}
-
-.KobatoIMG {
-  float: left;
-  position: absolute;
-  left: 200px;
-  height: 200px;
-  width: 200px;
-  border-radius: 50%;
-}
-.project3 p {
-  color: white;
-  text-align: center;
-  font-size: 20px;
-  font-family: verdana;
-}
-.project3 a {
-  color: white;
-  background-color: black;
-  text-align: center;
-  padding: 14px 20px;
-  text-decoration: none;
-  font-size: 17px;
+.project2 {
   border-radius: 25px;
-  position: absolute;
-  left: 48%;
+  border-style: solid;
+  border-color: black;
 }
-.project3 a:hover {
-  background-color: white;
-  color: black;
-}
-
-@media only screen and (max-width: 768px) {
-  .wwwglobe {
-    display: none;
-  }
-  .project1 p {
-    font-size: 16px;
-  }
-  .SScardimage {
-    display: none;
-  }
-  .project2 p {
-    font-size: 16px;
-  }
-  .project2 a {
-    left: 40%;
-  }
-  .KobatoIMG {
-    display: none;
-  }
-  .project3 p {
-    font-size: 16px;
-  }
-  .project3 a {
-    left: 40%;
-  }
+.project3 {
+  border-radius: 25px;
+  border-style: solid;
+  border-color: black;
 }
