--- a/css/projects.css
+++ b/css/projects.css
@@ -2,14 +2,20 @@
   border-radius: 25px;
   border-style: solid;
   border-color: black;
+  position: relative;
+  right: 50%;
 }
 .project2 {
   border-radius: 25px;
   border-style: solid;
   border-color: black;
+  position: relative;
+  right: 50%;
 }
 .project3 {
   border-radius: 25px;
   border-style: solid;
   border-color: black;
+  position: relative;
+  right: 50%;
 }
