--- a/css/projects.css
+++ b/css/projects.css
@@ -4,6 +4,7 @@
   border-color: black;
   position: relative;
   right: 50%;
+  width: 75%;
 }
 .project2 {
   border-radius: 25px;
@@ -11,6 +12,7 @@
   border-color: black;
   position: relative;
   right: 50%;
+  width: 75%;
 }
 .project3 {
   border-radius: 25px;
@@ -18,4 +20,5 @@
   border-color: black;
   position: relative;
   right: 50%;
+  width: 75%;
 }
