--- a/css/projects.css
+++ b/css/projects.css
@@ -2,6 +2,7 @@
   border-radius: 25px;
   border-style: solid;
   border-color: black;
+  display: block;
   position: relative;
   right: 50%;
   width: 75%;
@@ -10,6 +11,7 @@
   border-radius: 25px;
   border-style: solid;
   border-color: black;
+  display: block;
   position: relative;
   right: 50%;
   width: 75%;
@@ -18,6 +20,7 @@
   border-radius: 25px;
   border-style: solid;
   border-color: black;
+  display: block;
   position: relative;
   right: 50%;
   width: 75%;
