--- a/css/projects.css
+++ b/css/projects.css
@@ -31,18 +31,18 @@
 
 .project1 img {
   width: 15%;
-  float: right;
-  margin-left: 10px;
+  float: left;
+  margin-right: 10px;
 }
 .project2 img {
   width: 15%;
-  float: right;
-  margin-left: 10px;
+  float: left;
+  margin-right: 10px;
 }
 .project3 img {
   width: 15%;
-  float: right;
-  margin-left: 10px;
+  float: left;
+  margin-right: 10px;
 }
 
 .project1 p {
