--- a/css/projects.css
+++ b/css/projects.css
@@ -7,6 +7,7 @@
   left: 10%;
   width: 75%;
   margin: 20px;
+  overflow: hidden;
 }
 .project2 {
   border-radius: 25px;
@@ -17,6 +18,7 @@
   left: 10%;
   width: 75%;
   margin: 20px;
+  overflow: hidden;
 }
 .project3 {
   border-radius: 25px;
@@ -27,6 +29,7 @@
   left: 10%;
   width: 75%;
   margin: 20px;
+  overflow: hidden;
 }
 
 .project1 img {
