--- a/css/projects.css
+++ b/css/projects.css
@@ -3,7 +3,7 @@
   border-style: solid;
   border-color: black;
   display: block;
-  position: relative;
+  position: absolute;
   left: 10%;
   width: 75%;
   margin: 20px;
@@ -14,7 +14,7 @@
   border-style: solid;
   border-color: black;
   display: block;
-  position: relative;
+  position: absolute;
   left: 10%;
   width: 75%;
   margin: 20px;
@@ -25,7 +25,7 @@
   border-style: solid;
   border-color: black;
   display: block;
-  position: relative;
+  position: absolute;
   left: 10%;
   width: 75%;
   margin: 20px;
