--- a/css/commissions.css
+++ b/css/commissions.css
@@ -1,3 +1,21 @@
 h3 {
-  text-align: center;
+  left: 40%
+}
+
+.comm1 {
+  border-radius: 25px;
+  border-style: solid;
+  border-color: black;
+  display: block;
+  position: absolute;
+  left: 10%;
+  top: 2%;
+  width: 75%;
+  margin: 20px;
+  overflow: hidden;
+}
+
+.comm1 h4 {
+  position: relative;
+  left: 25%;
 }
