--- a/css/commissions.css
+++ b/css/commissions.css
@@ -1,6 +1,6 @@
 h3 {
   top: 20px;
-  left: 40%
+  text-align: center;
 }
 
 .comm1 {
@@ -17,7 +17,7 @@ h3 {
 
 .comm1 h4 {
   position: relative;
-  margin-left: 10px;
+  text-align: center;
 }
 
 .comm1 p {
