--- a/css/commissions.css
+++ b/css/commissions.css
@@ -1,6 +1,7 @@
 h3 {
   top: 20px;
   text-align: center;
+  font-family: Comfortaa;
 }
 
 .comm1 {
@@ -13,6 +14,7 @@ h3 {
   top: 4%;
   width: 25%;
   margin: 20px;
+  font-family: Comfortaa;
 }
 
 .comm1 h4 {
