--- a/css/global.css
+++ b/css/global.css
@@ -23,6 +23,7 @@ nav {
   display: block;
   left: 2%;
   z-index: 1;
+  font-family: Comfortaa;
 }
 h2 {
   position: absolute;
@@ -30,6 +31,11 @@ h2 {
   top: 0%;
   right: 1%;
   color: black;
+  font-family: Comfortaa;
+}
+@font-face {
+  font-family: 'Comfortaa';
+  src: url('../Comfortaa-Regular.ttf');
 }
 
 @media only screen and (max-width: 768px) {
