--- a/css/projects.css
+++ b/css/projects.css
@@ -9,6 +9,7 @@
   width: 75%;
   margin: 20px;
   overflow: hidden;
+  font-family: Comfortaa;
 }
 .project2 {
   border-radius: 25px;
@@ -21,6 +22,7 @@
   width: 75%;
   margin: 20px;
   overflow: hidden;
+  font-family: Comfortaa;
 }
 .project3 {
   border-radius: 25px;
@@ -33,6 +35,7 @@
   width: 75%;
   margin: 20px;
   overflow: hidden;
+  font-family: Comfortaa;
 }
 
 .project1 img {
