--- a/css/projects.css
+++ b/css/projects.css
@@ -10,6 +10,7 @@
   margin: 20px;
   overflow: hidden;
   font-family: Comfortaa;
+  z-index: 3;
 }
 .project2 {
   border-radius: 25px;
@@ -23,6 +24,7 @@
   margin: 20px;
   overflow: hidden;
   font-family: Comfortaa;
+  z-index: 3;
 }
 .project3 {
   border-radius: 25px;
@@ -36,6 +38,7 @@
   margin: 20px;
   overflow: hidden;
   font-family: Comfortaa;
+  z-index: 3;
 }
 
 .project1 img {
