--- a/css/global.css
+++ b/css/global.css
@@ -21,6 +21,7 @@ nav a:hover {
 nav {
   float: left;
   display: block;
+  position: absolute;
   left: 2%;
   z-index: 1;
   font-family: Comfortaa;
