--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,7 @@
   left: 50%;
   margin-top: 15px;
   text-align: center;
+  transform: translate(-50px, 0px);
 }
 .pfp {
   display: block;
@@ -24,6 +25,7 @@
   top: 20%;
   width: 15%;
   height: 15%;
+  transform: translate(-50px, 0px);
 }
 
 @media only screen and (max-width: 768px) {
