--- a/css/index.css
+++ b/css/index.css
@@ -16,7 +16,7 @@
   left: 50%;
   margin-top: 15px;
   text-align: center;
-  transform: translate(-50px, 0px);
+  transform: translate(-50%, 0px);
 }
 .pfp {
   display: block;
@@ -25,7 +25,7 @@
   top: 20%;
   width: 15%;
   height: 15%;
-  transform: translate(-50px, 0px);
+  transform: translate(-50%, 0px);
 }
 
 @media only screen and (max-width: 768px) {
