--- a/css/commissions.css
+++ b/css/commissions.css
@@ -15,6 +15,7 @@ h3 {
   width: 25%;
   margin: 20px;
   font-family: Comfortaa;
+  background-image: linear-gradient(to bottom right, rgb(48, 173, 231), rgb(218, 81, 138))
 }
 
 .comm1 h4 {
