--- a/css/projects.css
+++ b/css/projects.css
@@ -7,6 +7,7 @@
   left: 10%;
   top: 2%;
   width: 50%;
+  height: 75%;
   margin: 20px;
   overflow: hidden;
   font-family: Comfortaa;
@@ -21,6 +22,7 @@
   left: 10%;
   top: 26%;
   width: 50%;
+  height: 75%;
   margin: 20px;
   overflow: hidden;
   font-family: Comfortaa;
@@ -35,6 +37,7 @@
   left: 10%;
   top: 51%;
   width: 50%;
+  height: 75%;
   margin: 20px;
   overflow: hidden;
   font-family: Comfortaa;
