--- a/css/index.css
+++ b/css/index.css
@@ -32,12 +32,10 @@
   .pfp {
     width: 50%;
     max-width: 50%;
-    left: 0;
-    right: 30%
+    left: 70%;
   }
   .text1 {
-    left: 0;
-    right: 30%;
+    left: 70%;
     width: 50%;
     max-width: 50%;
   }
