--- a/css/projects.css
+++ b/css/projects.css
@@ -100,3 +100,24 @@
   border-radius: 25px;
   padding: 5px;
 }
+
+@media only screen and (max-width: 768px) {
+  .project1 {
+    left: 70%;
+    width: 60%;
+    height: 40%;
+    top: 2%;
+  }
+  .project2 {
+    left: 70%;
+    width: 60%;
+    height: 40%;
+    top: 46%;
+  }
+  .project3 {
+    left: 70%;
+    width: 60%;
+    height: 40%;
+    top: 81%;
+  }
+}
