--- a/css/projects.css
+++ b/css/projects.css
@@ -120,4 +120,40 @@
     height: 40%;
     top: 81%;
   }
+  .project1 h3 {
+    left: 15%;
+  }
+  .project2 h3 {
+    left: 15%;
+  }
+  .project3 h3 {
+    left: 15%;
+  }
+  .project1 p {
+    margin: 5px;
+  }
+  .project2 p {
+    margin: 5px;
+  }
+  .project3 p {
+    margin: 5px;
+  }
+  .project1 a {
+    margin-left: 5px;
+  }
+  .project2 a {
+    margin-left: 5px;
+  }
+  .project3 a {
+    margin-left: 5px;
+  }
+  .project1 img {
+    width: 25%;
+  }
+  .project2 img {
+    width: 25%;
+  }
+  .project3 img {
+    width: 25%;
+  }
 }
