--- a/css/commissions.css
+++ b/css/commissions.css
@@ -7,7 +7,7 @@ h3 {
 .comm1 {
   border-radius: 25px;
   border-style: solid;
-  border-color: black;
+  border-color: white;
   display: block;
   position: absolute;
   left: 10%;
