--- a/css/projects.css
+++ b/css/projects.css
@@ -1,7 +1,7 @@
 .project1 {
   border-radius: 25px;
   border-style: solid;
-  border-color: black;
+  border-color: white;
   display: block;
   position: absolute;
   left: 15%;
@@ -16,7 +16,7 @@
 .project2 {
   border-radius: 25px;
   border-style: solid;
-  border-color: black;
+  border-color: white;
   display: block;
   position: absolute;
   left: 15%;
@@ -31,7 +31,7 @@
 .project3 {
   border-radius: 25px;
   border-style: solid;
-  border-color: black;
+  border-color: white;
   display: block;
   position: absolute;
   left: 15%;
@@ -78,7 +78,7 @@
   left: 50%;
   text-decoration: none;
   background-color: aqua;
-  color: black;
+  color: white;
   border-radius: 25px;
   padding: 5px;
 }
@@ -87,7 +87,7 @@
   left: 50%;
   text-decoration: none;
   background-color: aqua;
-  color: black;
+  color: white;
   border-radius: 25px;
   padding: 5px;
 }
@@ -96,7 +96,7 @@
   left: 50%;
   text-decoration: none;
   background-color: aqua;
-  color: black;
+  color: white;
   border-radius: 25px;
   padding: 5px;
 }
