--- a/css/projects.css
+++ b/css/projects.css
@@ -1,11 +1,10 @@
-.project1 {
+.project-holder {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
   border-radius: 25px;
   border-style: solid;
   border-color: white;
-  display: block;
-  position: absolute;
-  left: 15%;
-  top: 2%;
   width: 50%;
   height: 20%;
   margin: 20px;
@@ -13,36 +12,9 @@
   font-family: Comfortaa;
   background-image: linear-gradient(to bottom right, rgb(48, 173, 231), rgb(149, 25, 221));
 }
-.project2 {
-  border-radius: 25px;
-  border-style: solid;
-  border-color: white;
-  display: block;
-  position: absolute;
-  left: 15%;
-  top: 26%;
-  width: 50%;
-  height: 20%;
-  margin: 20px;
-  overflow: hidden;
-  font-family: Comfortaa;
-  background-image: linear-gradient(to bottom right, rgb(48, 173, 231), rgb(149, 25, 221))
-}
-.project3 {
-  border-radius: 25px;
-  border-style: solid;
-  border-color: white;
-  display: block;
-  position: absolute;
-  left: 15%;
-  top: 51%;
-  width: 50%;
-  height: 20%;
-  margin: 20px;
-  overflow: hidden;
-  font-family: Comfortaa;
-  background-image: linear-gradient(to bottom right, rgb(48, 173, 231), rgb(149, 25, 221))
-}
+.project1 {flex: 25%;}
+.project2 {flex: 25%;}
+.project3 {flex: 25%;}
 
 .project1 img {
   width: 20%;
