--- a/css/projects.css
+++ b/css/projects.css
@@ -2,6 +2,12 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  font-family: Comfortaa;
+  background-image: linear-gradient(to bottom right, rgb(48, 173, 231), rgb(149, 25, 221));
+}
+.project {
+  flex: 25%;
+  margin: auto;
   border-radius: 25px;
   border-style: solid;
   border-color: white;
@@ -9,21 +15,12 @@
   height: 20%;
   margin: 20px;
   overflow: hidden;
-  font-family: Comfortaa;
-  background-image: linear-gradient(to bottom right, rgb(48, 173, 231), rgb(149, 25, 221));
-}
-.project {
-  flex: 25%;
-  margin: auto;
+  text-align: center;
 }
 .project img {
   width: 20%;
   float: left;
   margin-right: 10px;
-}
-.project h3 {
-  position: relative;
-  left: 25%;
 }
 .project a {
   text-align: center;
