--- a/css/commissions.css
+++ b/css/commissions.css
@@ -2,73 +2,28 @@ h3 {
   top: 20px;
   text-align: center;
   font-family: Comfortaa;
+  color: white;
 }
-
-.comm1 {
+.comm-holder {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  font-family: Comfortaa;
+}
+.comm {
+  flex: 25%;
+  margin: auto;
   border-radius: 25px;
   border-style: solid;
   border-color: white;
-  display: block;
-  position: absolute;
-  left: 10%;
-  top: 4%;
   width: 25%;
   height: auto;
   margin: 20px;
+  text-align: center;
   font-family: Comfortaa;
   background-image: linear-gradient(to bottom right, rgb(48, 173, 231), rgb(218, 81, 138))
 }
 
-.comm1 h4 {
-  position: relative;
-  text-align: center;
-}
-
-.comm1 p {
-  position: relative;
-  margin-left: 15px;
-}
-
-.comm2 {
-  border-radius: 25px;
-  border-style: solid;
-  border-color: white;
-  display: block;
-  position: absolute;
-  left: 10%;
-  top: 10%;
-  width: 25%;
-  height: auto;
-  margin: 20px;
-  font-family: Comfortaa;
-  background-image: linear-gradient(to bottom right, rgb(48, 173, 231), rgb(218, 81, 138))
-}
-
-.comm2 h4 {
-  position: relative;
-  text-align: center;
-}
-
-.comm2 p {
-  position: relative;
-  margin-left: 15px;
-}
 
 @media only screen and (max-width: 768px) {
-  .comm1 {
-    left: 35%;
-    width: 50%;
-    top: 7%;
-  }
-  .comm1 p {
-    margin-right: 15px;
-  }
-  .comm2 {
-    left: 35%;
-    width: 50%;
-    top: 15%;
-  }
-  .comm2 p {
-    margin-right: 15px;
-  }
 }
