--- a/css/commissions.css
+++ b/css/commissions.css
@@ -9,6 +9,8 @@ h3 {
   flex-wrap: wrap;
   justify-content: center;
   font-family: Comfortaa;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 .comm {
   flex: 25%;
