--- a/css/commissions.css
+++ b/css/commissions.css
@@ -9,8 +9,8 @@ h3 {
   flex-wrap: wrap;
   justify-content: center;
   font-family: Comfortaa;
-  margin-left: 5%;
-  margin-right: 5%;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 .comm {
   flex: 25%;
@@ -18,7 +18,7 @@ h3 {
   border-radius: 25px;
   border-style: solid;
   border-color: white;
-  width: 25%;
+  width: auto;
   height: auto;
   margin: 20px;
   text-align: center;
