--- a/css/projects.css
+++ b/css/projects.css
@@ -5,7 +5,7 @@
   font-family: Comfortaa;
   margin-left: 10%;
   margin-right: 10%;
-  margin-top: 20px;
+  margin-top: 30px;
 }
 .project {
   flex: 25%;
@@ -35,13 +35,14 @@
   border-radius: 25px;
   border: solid gray 0;
   padding: 10px;
+  font-weight: bold;
   font-size: medium;
   transition: all 500ms;
 }
 .project a:hover {
   background-color: white;
   color: black;
-  border: solid gray 2px;
+  border: solid gray 10px;
 }
 
 @media only screen and (max-width: 768px) {
