--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,19 @@
   text-align: center;
   transform: translate(-50%, 0px);
 }
+.text1 {
+  background-image: linear-gradient(to bottom right, rgb(223, 110, 144)rgb(101, 230, 27));
+  border-color: white;
+  border-style: solid;
+  border-radius: 25px;
+  width: 20%;
+  display: block;
+  position: relative;
+  left: 50%;
+  margin-top: 15px;
+  text-align: center;
+  transform: translate(-50%, 0px);
+}
 .pfp {
   display: block;
   position: relative;
