--- a/css/titles.css
+++ b/css/titles.css
@@ -2,9 +2,11 @@
     left: 50%;
     font-family: Comfortaa;
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: center;
     margin-top: 20px;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 .title1 {
     flex: 10%;
@@ -14,7 +16,6 @@
     border-radius: 25px;
     width: 20%;
     text-align: center;
-    transform: translate(-50%, 0px);
 }
 .title2 {
     flex: 10%;
@@ -24,7 +25,6 @@
     border-radius: 25px;
     width: 20%;
     text-align: center;
-    transform: translate(-50%, 0px);
 }
 @media only screen and (max-width: 768px) {
 }
